terraform-work5/import.tf
# __generated__ by Terraform
# Please review these resources and move them into your main configuration files.

# __generated__ by Terraform from "/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama"
resource "azurerm_resource_group" "rg" {
  location   = "japanwest"
  managed_by = null
  name       = "rg-win-vm-iis-llama"
  tags       = {}
}

# __generated__ by Terraform from "/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama/providers/Microsoft.Network/publicIPAddresses/win-vm-iis-llama-public-ip"
resource "azurerm_public_ip" "terraform_work5_public_ip" {
  allocation_method       = "Static"
  ddos_protection_mode    = "VirtualNetworkInherited"
  ddos_protection_plan_id = null
  domain_name_label       = null
  domain_name_label_scope = null
  edge_zone               = null
  idle_timeout_in_minutes = 4
  ip_tags                 = {}
  ip_version              = "IPv4"
  location                = "japanwest"
  name                    = "win-vm-iis-llama-public-ip"
  public_ip_prefix_id     = null
  resource_group_name     = "rg-win-vm-iis-llama"
  reverse_fqdn            = null
  sku                     = "Standard"
  sku_tier                = "Regional"
  tags                    = {}
  zones                   = []
}

# __generated__ by Terraform
resource "azurerm_virtual_network" "terraform_work5_network" {
  address_space = ["10.0.0.0/16"]
  bgp_community = null
  dns_servers   = []
  edge_zone     = null
  #flow_timeout_in_minutes = 0
  location            = "japanwest"
  name                = "win-vm-iis-llama-vnet"
  resource_group_name = "rg-win-vm-iis-llama"
  #subnet = [{
  #  address_prefixes                              = ["10.0.1.0/24"]
  #  default_outbound_access_enabled               = true
  #  delegation                                    = []
  #  id                                            = "/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama/providers/Microsoft.Network/virtualNetworks/win-vm-iis-llama-vnet/subnets/win-vm-iis-llama-subnet"
  #  name                                          = "win-vm-iis-llama-subnet"
  #  private_endpoint_network_policies             = "Disabled"
  #  private_link_service_network_policies_enabled = true
  #  route_table_id                                = ""
  #  security_group                                = ""
  #  service_endpoint_policy_ids                   = []
  #  service_endpoints                             = []
  #}]
  tags = {}
}

# __generated__ by Terraform from "/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama/providers/Microsoft.Network/networkSecurityGroups/win-vm-iis-llama-nsg"
resource "azurerm_network_security_group" "terraform_work5_nsg" {
  location            = "japanwest"
  name                = "win-vm-iis-llama-nsg"
  resource_group_name = "rg-win-vm-iis-llama"
  security_rule = [{
    access                                     = "Allow"
    description                                = ""
    destination_address_prefix                 = "*"
    destination_address_prefixes               = []
    destination_application_security_group_ids = []
    destination_port_range                     = "3389"
    destination_port_ranges                    = []
    direction                                  = "Inbound"
    name                                       = "RDP"
    priority                                   = 1000
    protocol                                   = "*"
    source_address_prefix                      = "120.75.97.239"
    source_address_prefixes                    = []
    source_application_security_group_ids      = []
    source_port_range                          = "*"
    source_port_ranges                         = []
    }, {
    access                                     = "Allow"
    description                                = ""
    destination_address_prefix                 = "*"
    destination_address_prefixes               = []
    destination_application_security_group_ids = []
    destination_port_range                     = "80"
    destination_port_ranges                    = []
    direction                                  = "Inbound"
    name                                       = "web"
    priority                                   = 1001
    protocol                                   = "Tcp"
    source_address_prefix                      = "120.75.97.239"
    source_address_prefixes                    = []
    source_application_security_group_ids      = []
    source_port_range                          = "*"
    source_port_ranges                         = []
  }]
  tags = {}
}

# __generated__ by Terraform from "/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama/providers/Microsoft.Network/virtualNetworks/win-vm-iis-llama-vnet/subnets/win-vm-iis-llama-subnet"
resource "azurerm_subnet" "terraform_work3_subnet" {
  address_prefixes                              = ["10.0.1.0/24"]
  default_outbound_access_enabled               = true
  name                                          = "win-vm-iis-llama-subnet"
  private_endpoint_network_policies             = "Disabled"
  private_link_service_network_policies_enabled = true
  resource_group_name                           = "rg-win-vm-iis-llama"
  service_endpoint_policy_ids                   = []
  service_endpoints                             = []
  virtual_network_name                          = "win-vm-iis-llama-vnet"
}

# __generated__ by Terraform from "/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama/providers/Microsoft.Network/networkInterfaces/win-vm-iis-llama-nic"
resource "azurerm_network_interface" "terraform_work5_nic" {
  accelerated_networking_enabled = false
  auxiliary_mode                 = null
  auxiliary_sku                  = null
  dns_servers                    = []
  edge_zone                      = null
  internal_dns_name_label        = null
  ip_forwarding_enabled          = false
  location                       = "japanwest"
  name                           = "win-vm-iis-llama-nic"
  resource_group_name            = "rg-win-vm-iis-llama"
  tags                           = {}
  ip_configuration {
    gateway_load_balancer_frontend_ip_configuration_id = null
    name                                               = "terraform_work3_nic_configuration"
    primary                                            = true
    private_ip_address                                 = "10.0.1.4"
    private_ip_address_allocation                      = "Dynamic"
    private_ip_address_version                         = "IPv4"
    public_ip_address_id                               = "/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama/providers/Microsoft.Network/publicIPAddresses/win-vm-iis-llama-public-ip"
    subnet_id                                          = "/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama/providers/Microsoft.Network/virtualNetworks/win-vm-iis-llama-vnet/subnets/win-vm-iis-llama-subnet"
  }
}

# __generated__ by Terraform from "/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama/providers/Microsoft.Compute/virtualMachines/win-vm-iis-vm/extensions/win-vm-iis-llama-wsi"
resource "azurerm_virtual_machine_extension" "web_server_install" {
  auto_upgrade_minor_version  = true
  automatic_upgrade_enabled   = false
  failure_suppression_enabled = false
  name                        = "win-vm-iis-llama-wsi"
  protected_settings          = null # sensitive
  provision_after_extensions  = []
  publisher                   = "Microsoft.Compute"
  settings = jsonencode({
    commandToExecute = "powershell -ExecutionPolicy Unrestricted Install-WindowsFeature -Name Web-Server -IncludeAllSubFeature -IncludeManagementTools"
  })
  tags                 = {}
  type                 = "CustomScriptExtension"
  type_handler_version = jsonencode(1.8)
  virtual_machine_id   = "/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama/providers/Microsoft.Compute/virtualMachines/win-vm-iis-vm"
}

# __generated__ by Terraform
resource "azurerm_windows_virtual_machine" "main" {
  admin_password                                         = "Dummy!pw#123" # sensitive
  admin_username                                         = "azureuser"
  allow_extension_operations                             = true
  availability_set_id                                    = null
  bypass_platform_safety_checks_on_user_schedule_enabled = false
  capacity_reservation_group_id                          = null
  computer_name                                          = "win-vm-iis-vm"
  custom_data                                            = null # sensitive
  dedicated_host_group_id                                = null
  dedicated_host_id                                      = null
  disk_controller_type                                   = "SCSI"
  edge_zone                                              = null
  enable_automatic_updates                               = true
  encryption_at_host_enabled                             = false
  eviction_policy                                        = null
  extensions_time_budget                                 = "PT1H30M"
  hotpatching_enabled                                    = false
  license_type                                           = null
  location                                               = "japanwest"
  max_bid_price                                          = -1
  name                                                   = "win-vm-iis-vm"
  network_interface_ids                                  = ["/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/rg-win-vm-iis-llama/providers/Microsoft.Network/networkInterfaces/win-vm-iis-llama-nic"]
  patch_assessment_mode                                  = "ImageDefault"
  patch_mode                                             = "AutomaticByOS"
  #platform_fault_domain                                  = -1
  priority                          = "Regular"
  provision_vm_agent                = true
  proximity_placement_group_id      = null
  reboot_setting                    = null
  resource_group_name               = "rg-win-vm-iis-llama"
  secure_boot_enabled               = false
  size                              = "Standard_DS1_v2"
  source_image_id                   = null
  tags                              = {}
  timezone                          = null
  user_data                         = null
  virtual_machine_scale_set_id      = null
  vm_agent_platform_updates_enabled = false
  vtpm_enabled                      = false
  zone                              = null
  boot_diagnostics {
    storage_account_uri = "https://diag3abb2f58b75025ad.blob.core.windows.net/"
  }
  os_disk {
    caching                          = "ReadWrite"
    disk_encryption_set_id           = null
    disk_size_gb                     = 127
    name                             = "myOsDisk"
    secure_vm_disk_encryption_set_id = null
    security_encryption_type         = null
    storage_account_type             = "Premium_LRS"
    write_accelerator_enabled        = false
  }
  source_image_reference {
    offer     = "WindowsServer"
    publisher = "MicrosoftWindowsServer"
    sku       = "2022-datacenter-azure-edition"
    version   = "latest"
  }
}

# __generated__ by Terraform
resource "azurerm_storage_account" "terraform_work5_storage_account" {
  access_tier                       = "Hot"
  account_kind                      = "StorageV2"
  account_replication_type          = "LRS"
  account_tier                      = "Standard"
  allow_nested_items_to_be_public   = true
  allowed_copy_scope                = null
  cross_tenant_replication_enabled  = false
  default_to_oauth_authentication   = false
  dns_endpoint_type                 = "Standard"
  edge_zone                         = null
  https_traffic_only_enabled        = true
  infrastructure_encryption_enabled = false
  is_hns_enabled                    = false
  large_file_share_enabled          = false
  local_user_enabled                = true
  location                          = "japanwest"
  min_tls_version                   = "TLS1_2"
  name                              = "diag3abb2f58b75025ad"
  nfsv3_enabled                     = false
  public_network_access_enabled     = true
  queue_encryption_key_type         = "Service"
  resource_group_name               = "rg-win-vm-iis-llama"
  sftp_enabled                      = false
  shared_access_key_enabled         = true
  table_encryption_key_type         = "Service"
  tags                              = {}
  #blob_properties {
  #  change_feed_enabled           = false
  #  change_feed_retention_in_days = 0
  #  default_service_version       = null
  #  last_access_time_enabled      = false
  #  versioning_enabled            = false
  #}
  share_properties {
    retention_policy {
      days = 7
    }
  }
}

# ####################################################################
# Application Gateway を追加
# ####################################################################
variable "backend_address_pool_name" {
  default = "myBackendPool"
}

variable "frontend_port_name" {
  default = "myFrontendPort"
}

variable "frontend_ip_configuration_name" {
  default = "myAGIPConfig"
}

variable "http_setting_name" {
  default = "myHTTPsetting"
}

variable "listener_name" {
  default = "myListener"
}

variable "request_routing_rule_name" {
  default = "myRoutingRule"
}

resource "azurerm_subnet" "frontend" {
  name                 = "myAGSubnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.terraform_work5_network.name
  address_prefixes     = ["10.0.10.0/24"]
}

resource "azurerm_public_ip" "pip" {
  name                = "myAGPublicIPAddress"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location
  allocation_method   = "Static"
  sku                 = "Standard"
}


resource "azurerm_application_gateway" "main" {
  name                = "myAppGateway"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location

  sku {
    name     = "Standard_v2"
    tier     = "Standard_v2"
    capacity = 2
  }

  gateway_ip_configuration {
    name      = "my-gateway-ip-configuration"
    subnet_id = azurerm_subnet.frontend.id
  }

  frontend_port {
    name = var.frontend_port_name
    port = 80
  }

  frontend_ip_configuration {
    name                 = var.frontend_ip_configuration_name
    public_ip_address_id = azurerm_public_ip.pip.id
  }

  backend_address_pool {
    name = var.backend_address_pool_name
  }

  backend_http_settings {
    name                  = var.http_setting_name
    cookie_based_affinity = "Disabled"
    port                  = 80
    protocol              = "Http"
    request_timeout       = 60
  }

  http_listener {
    name                           = var.listener_name
    frontend_ip_configuration_name = var.frontend_ip_configuration_name
    frontend_port_name             = var.frontend_port_name
    protocol                       = "Http"
  }

  request_routing_rule {
    name                       = var.request_routing_rule_name
    rule_type                  = "Basic"
    http_listener_name         = var.listener_name
    backend_address_pool_name  = var.backend_address_pool_name
    backend_http_settings_name = var.http_setting_name
    priority                   = 1
  }
}

resource "azurerm_network_interface_application_gateway_backend_address_pool_association" "nic-assoc" {
  network_interface_id    = azurerm_network_interface.terraform_work5_nic.id
  ip_configuration_name   = "terraform_work3_nic_configuration"
  backend_address_pool_id = one(azurerm_application_gateway.main.backend_address_pool).id
}
